--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/404.css">
-    <link rel="stylesheet" href="../style/Navbar.css">
+    <link rel="stylesheet" href="/style/404.css">
+    <link rel="stylesheet" href="/style/Navbar.css">
     <title>404 Error</title>
 </head>
 <body>
     <div id="notfound">
         <ul class="topNav">
-            <li class="a1"><a href="../Index.html">CV<span>Loper</span></a></li>
-            <li class="active"><a href="./Login.html">Sign in</a></li>
+            <li class="a1"><a href="./Index.html">CV<span>Loper</span></a></li>
+            <li class="active"><a href="./pages/Login.html">Sign in</a></li>
             <li><a href="contact.asp">Contact</a></li>
             <li><a href="about.asp">About</a></li>
         </ul>
