--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
       <div class="boxKiri">
         <h1 class="logo1">CV<span>Loper</span></h1>
         <hr/>
-         <div class="konten">
+         <div class="kontens">
           <h1 class="judul">Create Your Own CV</h1>
           <p>"Lorem ipsum dolor sit ametss, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
           <a href="kemanapun" class="button1"> INI BUTTON</a>
