--- a/pages/Login.html
+++ b/pages/Login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/Login.css">
     <link rel="stylesheet" href="../style/Navbar.css">
-    <title>CVLoper</title>
+    <title>Login</title>
 </head>
 <body>
     <div>
