--- a/Index.html
+++ b/Index.html
@@ -10,10 +10,10 @@
 <body>
     <div>
       <ul class="topNav">
-        <li class="a1"><a>CV<span>Loper</span></a></li>
+        <li class="a1"><a href="./Index.html">CV<span>Loper</span></a></li>
         <li class="active"><a href="./pages/Login.html">Sign in</a></li>
         <li><a href="contact.asp">Contact</a></li>
-        <li><a href="about.asp">About</a></li>
+        <li><a href="./pages/About.html">About</a></li>
     </ul>
     <div class="BOX">
       <div class="boxKiri">
