--- a/pages/About.html
+++ b/pages/About.html
@@ -12,8 +12,8 @@
         <ul class="topNav">
             <li class="a1"><a href="../Index.html">CV<span>Loper</span></a></li>
             <li class="active"><a href="./Login.html">Sign in</a></li>
-            <li><a href="contact.asp">Contact</a></li>
-            <li><a href="about.asp">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="./About.html">About</a></li>
         </ul>
         <h1 class="judul">CV<span>Lover</span></h1>
         <div class="kotakTransparan">
