--- a/pages/Login.html
+++ b/pages/Login.html
@@ -13,7 +13,7 @@
             <li class="a1"><a href="../Index.html">CV<span>Loper</span></a></li>
             <li class="active"><a href="./Login.html">Sign in</a></li>
             <li><a href="contact.asp">Contact</a></li>
-            <li><a href="about.asp">About</a></li>
+            <li><a href="./About.html">About</a></li>
         </ul>
         <div class="body">
             <div class="grad">
